force-app/main/default/objects/SVMXA360__AssetNotification__c/SVMXA360__AssetNotification__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage product maintenance &amp; service notifications.</description>
    <label>Asset Notification</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>