force-app/main/default/objects/SVMXA360__AssetNotification__c/fields/SVMXA360__AssetId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetId__c</fullName>
    <description>The Asset related to this Asset Notification Record.</description>
    <inlineHelpText>The Asset related to this Asset Notification Record.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Notifications</relationshipLabel>
    <relationshipName>Asset_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>