force-app/main/default/objects/SVMXA360__AssetNotification__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>A description of the Asset Notification</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A description of the Asset Notification</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>