force-app/main/default/objects/SVMXA360__AssetNotification__c/fields/SVMXA360__ProductServiceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign related to the Asset Notification Record.</description>
    <inlineHelpText>The Product Service Campaign related to the Asset Notification Record.</inlineHelpText>
    <label>Product Service Campaign</label>
    <referenceTo>ProductServiceCampaign</referenceTo>
    <relationshipLabel>Asset Notifications</relationshipLabel>
    <relationshipName>Asset_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>