force-app/main/default/objects/SVMXA360__AssetNotification__c/fields/SVMXA360__ProductServiceCampaignItemId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign Item Line related to the Asset Alert Record.</description>
    <inlineHelpText>The Product Service Campaign Item Line related to the Asset Alert Record.</inlineHelpText>
    <label>Product Service Campaign Item</label>
    <referenceTo>ProductServiceCampaignItem</referenceTo>
    <relationshipLabel>Asset Notifications</relationshipLabel>
    <relationshipName>Asset_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>