force-app/main/default/objects/SVMXA360__AssetNotification__c/fields/SVMXA360__Severity__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Severity__c</fullName>
    <description>The Asset Notification’s Severity</description>
    <inlineHelpText>The Asset Notification’s Severity</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <default>true</default>
                <label>Moderate</label>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>