force-app/main/default/objects/SVMXA360__AssetNotification__c/fields/SVMXA360__Title__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Title__c</fullName>
    <description>The Asset Notification’s Title which is a combination of related Asset’s Serial Number and PSC Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Asset Notification’s Title which is a combination of related Asset’s Serial Number and PSC Name.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>